--- a/blog/src/app/components/login/login.component.html
+++ b/blog/src/app/components/login/login.component.html
@@ -1,33 +1,13 @@
 <div class="container">
+  <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
+ 
   <div>
-    <article class="card-body mx-auto">
-
-      <form>
-        <h4 class="card-title mt-3 text-center">Zaloguj się</h4>
-        <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-          </div>
-          <input [(ngModel)]="credentials.login" type="text"
-                 class="form-control"
-                 name="username" placeholder="Nazwa"
-                 title="Wprowadź login">
-        </div>
-        <div class="form-group input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-          </div>
-          <input [(ngModel)]="credentials.password"
-                 type="password" class="form-control"
-                 name="password" placeholder="Hasło" title="Wprowadź hasło">
-        </div>
-        <div class="form-group">
-          <button (click)="signIn()" name="Submit"
-                  type="submit" class="btn btn-primary btn-block">Zaloguj się
-          </button>
-        </div>
-      </form>
-    </article>
+    User Name : <input type="text" name="username" [(ngModel)]="username">
+    Password  : <input type="password" name="password" [(ngModel)]="password">
+ 
+ 
+     <button (click)=handleBasicAuthLogin() class="btn btn-success">Login</button>
+ 
   </div>
-
-</div>
+ </div>
+ 
